--- a/fornt-end/public/style.css
+++ b/fornt-end/public/style.css
@@ -1352,6 +1352,209 @@ margin-bottom: 0px;
 }
 /* LogIn Page */
 
+/* Reset Password Page */
+
+.admin-password-reset-page main{
+
+display: flex;
+align-items: center;
+justify-content: flex-start;
+padding: 45px;
+}
+
+.admin-password-reset-page-form-div hr {
+height: 1px;
+background: #78a481;
+margin-bottom: 25px;
+}
+
+.admin-password-reset-page-button-div {
+margin-top: 15px;
+}
+.admin-password-reset-page-button-div button {
+background-color: #ff4d67;
+color: white;
+border: none;
+border: 5px;
+font-size: 16px;
+padding: 5px 10px;
+border-radius: 5px;
+cursor: pointer;
+}
+
+.admin-password-reset-page-form-div input {
+font-size:16px ;
+padding: 5px 10px;
+}
+
+/* Reset Password Page */
+
+
+
+
+/* Succes Page*/
+
+.reset-password-succes-page main {
+height: 100vh;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+.reset-password-succes-page-form-div {
+text-align: center;
+}
+
+.reset-password-succes-page-form-div button{
+  background-color: #ff4d67;
+  color: white;
+  border: none;
+  border: 5px;
+  font-size: 21px;
+  padding: 15px 45px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.reset-password-succes-page-form-div h2{
+font-size: 40px;
+margin-top: 0px;
+}
+
+  
+
+
+
+
+
+
+
+
+
+
+.user-profile-photo-div img{
+width: 120px;
+height: 120px;
+border-radius: 100px;
+border: 4px solid #78a481
+}
+
+.user-profile-photo-div span {
+background-color: #ff4d67;
+cursor: pointer;
+}
+
+.user-profile-photo-div svg{
+cursor: pointer;
+}
+
+.delete-add-profile-photo-div {
+display: none;
+}
+
+.delete-add-profile-photo-div.active{
+display: flex;
+flex-direction: column;
+padding-left: 0px;
+margin-left: 15px;
+}
+
+.delete-add-profile-photo-div.active p{
+margin: 10px 0px;
+font-size: 15px;
+font-weight: 400;
+}
+
+.delete-add-profile-photo-div.active div{
+background-color: white;
+padding: 10px;
+width: 200px;
+cursor: pointer;
+}
+
+.delete-add-profile-photo-div.active div:hover{
+background-color: #78a481;
+color: white;
+cursor: pointer;
+}
+
+.delete-add-profile-photo-div.active{
+padding: 10px;
+width: 200px;
+}
+
+.user-profile-photo-div{
+display: flex;
+flex-direction: row;
+}
+
+.blur-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  backdrop-filter: blur(10px);
+  background: rgba(0, 0, 0, 0.3);
+  z-index: 5000;
+}
+
+.account-details-page {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh; /* Asigură-te că părintele are o înălțime minimă */
+}
+
+.add-picture-div{
+background-color: white;
+z-index: 6000;
+}
+
+
+.blur-overlay{
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
+body.no-scroll{
+overflow: hidden;
+}
+
+.add-picture-adjust-picture-square-focus-div{
+background-color: rgba(255, 255, 0, 0);
+width: 240px;
+height: 240px;
+border: 2px,solid, #d4d1d1;
+position: absolute;
+z-index: 6000;
+}
+
+.add-picture-adjust-picture-frame-div{
+background-color: red;
+padding: 70px;
+width: 500px;
+height: 350px;
+position: relative;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
+.add-picture-adjust-picture-div{
+background-color: purple;
+padding: 15px;
+}
+
+.add-picture-adjust-picture-frame-div img {
+max-width:500px;
+max-height: 350px;
+object-fit: contain;
+}
+
+/* Succes Page */
+
 
 
 /* Admin Section  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
